Apply Spotless